inline css, internal, external css

--- a/css/index1.html
+++ b/css/index1.html
@@ -31,9 +31,12 @@
         <p style="background-color: grey; color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
         <p style="background-color: grey; color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p> -->
 
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
+        <!-- id is unique and class is not unique -->
+
+         <p id="p1" class="odd" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
+        <p id="p2" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
+        <p id="p3" class="odd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
+        <p id="p4" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sequi.</p>
     
 </body>
 </html>
