--- a/HtmlCssProjects/SimplyRecipes/index.html
+++ b/HtmlCssProjects/SimplyRecipes/index.html
@@ -6,6 +6,16 @@
     <title>SimplyRecipes</title>
 </head>
 <body>
+    <div class="navbar">
+        <div class="nav-center">
+            <div class="nav-header">
+                <a href="index.html" class="nav-logo">
+                    <img src="./starter/assets/logo.svg" alt="SimplyRecipes">
+                </a>
+            </div>
+            <div class="nav-links"></div>
+        </div>
+    </div>
     
 </body>
 </html>
