header and navbar

--- a/HtmlCssProjects/SimplyRecipes/index.html
+++ b/HtmlCssProjects/SimplyRecipes/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SimplyRecipes</title>
+    <link rel="stylesheet" href="/Zero-to-one-frontend/HtmlCssProjects/SimplyRecipes/starter/css/normalize.css">
+    <link rel="stylesheet" href="/Zero-to-one-frontend/HtmlCssProjects/SimplyRecipes/starter/css/main.css">
+    
+    <script src="https://kit.fontawesome.com/2aa1bd50e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="navbar">
@@ -12,8 +16,19 @@
                 <a href="index.html" class="nav-logo">
                     <img src="./starter/assets/logo.svg" alt="SimplyRecipes">
                 </a>
+                <button type="button" class="btn nav-bar" >
+                    <i class="fas fa-align-justify"></i>
+                </button>
             </div>
-            <div class="nav-links"></div>
+            <div class="nav-links">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="tags.html" class="nav-link">Tags</a>
+                <a href="reciepes.html" class="nav-link">Reciepes</a>
+                <div class="nav-link contact-link">
+                    <a href="contact.html" class="btn">contact</a>
+                </div>
+            </div>
         </div>
     </div>
     
