restaurent website design

--- a/HtmlCssProjects/SimplyRecipes/starter/index.html
+++ b/HtmlCssProjects/SimplyRecipes/starter/index.html
@@ -2,23 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simply Recipes || Starter</title>
-    <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <!-- normalize -->
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <!-- font-awesome -->
+    <title>SimplyRecipes</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      href="/Zero-to-one-frontend/HtmlCssProjects/SimplyRecipes/starter/css/normalize.css"
     />
-    <!-- main css -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <link
+      rel="stylesheet"
+      href="/Zero-to-one-frontend/HtmlCssProjects/SimplyRecipes/starter/css/main.css"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/2aa1bd50e9.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-   <h1>Home Page </h1>
+    <!--nav-->
     
+    <nav class="navbar">
+      <div class="nav-center">
+
+        <!-- nav-header -->
+         <div class="nav-header">
+            <a href="index.html" class="nav-logo">
+                <img src="/Zero-to-one-frontend/HtmlCssProjects/SimplyRecipes/starter/assets/logo.svg" alt="SimplyRecipes logo">
+            </a>
+            <button type="button" class="btn nav-btn">
+                <i class="fas fa-align-justify"></i>
+            </button>
+         </div>
+         <!-- links -->
+         <div class="nav-links">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About</a>
+            <a href="tags.html" class="nav-link">Tags</a>
+            <a href="recipes.html" class="nav-link">Recipes</a>
+            <div class="nav-link contact-link">
+                <a href="contact.html" class="btn">Contact</a>
+            </div>
+         </div>
+        
+    </div>
+    </nav>
   </body>
 </html>
